--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     <style>
       /* Themes */
       :root {
-        /* Default (Light) */
         --color-bg: #F9FAFB;
         --color-surface: #FFFFFF;
         --color-surface-highlight: #F3F4F6;
@@ -84,31 +83,28 @@
       }
 
       .theme-dawn {
-        /* Warm Light */
         --color-bg: #FFFBF0;
         --color-surface: #FFFFFF;
         --color-surface-highlight: #FBF5E5;
         --color-primary: #4A3B32;
         --color-secondary: #8C7B70;
-        --color-accent: #D97706; /* Amber */
+        --color-accent: #D97706;
         --color-accent-fg: #FFFFFF;
         --color-accent-dim: #FEF3C7;
       }
 
       .theme-paper {
-        /* Minimalist Paper */
         --color-bg: #F5F5F4;
         --color-surface: #FFFFFF;
         --color-surface-highlight: #E7E5E4;
         --color-primary: #292524;
         --color-secondary: #78716C;
-        --color-accent: #57534E; /* Stone */
+        --color-accent: #57534E;
         --color-accent-fg: #FFFFFF;
         --color-accent-dim: #D6D3D1;
       }
 
       .theme-midnight {
-        /* Dark Blue */
         --color-bg: #0F172A;
         --color-surface: #1E293B;
         --color-surface-highlight: #334155;
@@ -120,30 +116,27 @@
       }
 
       .theme-obsidian {
-        /* Deep Black/Purple */
         --color-bg: #000000;
         --color-surface: #0A0A0A;
         --color-surface-highlight: #171717;
         --color-primary: #EDEDED;
         --color-secondary: #666666;
-        --color-accent: #A855F7; /* Purple */
+        --color-accent: #A855F7;
         --color-accent-fg: #FFFFFF;
         --color-accent-dim: #3B0764;
       }
 
       .theme-terminal {
-        /* Retro Terminal */
         --color-bg: #020402;
         --color-surface: #0D1C0D;
         --color-surface-highlight: #142814;
-        --color-primary: #22C55E; /* Matrix Green */
+        --color-primary: #22C55E;
         --color-secondary: #15803D;
         --color-accent: #22C55E;
         --color-accent-fg: #000000;
         --color-accent-dim: #052e16;
       }
 
-      /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 4px;
       }
@@ -157,7 +150,7 @@
       }
       
       html {
-        background-color: var(--color-bg); /* Fixes light mode bar at bottom */
+        background-color: var(--color-bg);
       }
 
       html, body {
@@ -186,16 +179,15 @@
     "react": "https://esm.sh/react@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <!-- Entry point for the application -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
