--- a/index.html
+++ b/index.html
@@ -36,149 +36,36 @@
               'shrink-out': 'shrinkOut 0.4s ease-in forwards',
             },
             keyframes: {
-              fadeIn: {
-                '0%': { opacity: '0' },
-                '100%': { opacity: '1' },
-              },
-              slideUp: {
-                '0%': { transform: 'translateY(20px)', opacity: '0' },
-                '100%': { transform: 'translateY(0)', opacity: '1' },
-              },
-              scaleIn: {
-                '0%': { transform: 'scale(0.9)', opacity: '0' },
-                '100%': { transform: 'scale(1)', opacity: '1' },
-              },
-              bounceSoft: {
-                '0%, 100%': { transform: 'scale(1)' },
-                '50%': { transform: 'scale(1.05)' },
-              },
-              slideOutRight: {
-                '0%': { transform: 'translateX(0)', opacity: '1' },
-                '100%': { transform: 'translateX(100%)', opacity: '0' },
-              },
-              slideOutLeft: {
-                '0%': { transform: 'translateX(0)', opacity: '1' },
-                '100%': { transform: 'translateX(-100%)', opacity: '0' },
-              },
-              shrinkOut: {
-                '0%': { transform: 'scale(1)', opacity: '1', maxHeight: '100px' },
-                '100%': { transform: 'scale(0.8)', opacity: '0', maxHeight: '0px', margin: '0px', padding: '0px' },
-              }
+              fadeIn: { '0%': { opacity: '0' }, '100%': { opacity: '1' } },
+              slideUp: { '0%': { transform: 'translateY(20px)', opacity: '0' }, '100%': { transform: 'translateY(0)', opacity: '1' } },
+              scaleIn: { '0%': { transform: 'scale(0.9)', opacity: '0' }, '100%': { transform: 'scale(1)', opacity: '1' } },
+              bounceSoft: { '0%, 100%': { transform: 'scale(1)' }, '50%': { transform: 'scale(1.05)' } },
+              slideOutRight: { '0%': { transform: 'translateX(0)', opacity: '1' }, '100%': { transform: 'translateX(100%)', opacity: '0' } },
+              slideOutLeft: { '0%': { transform: 'translateX(0)', opacity: '1' }, '100%': { transform: 'translateX(-100%)', opacity: '0' } },
+              shrinkOut: { '0%': { transform: 'scale(1)', opacity: '1', maxHeight: '100px' }, '100%': { transform: 'scale(0.8)', opacity: '0', maxHeight: '0px', margin: '0px', padding: '0px' } }
             }
           },
         },
       }
     </script>
     <style>
-      /* Themes */
-      :root {
-        --color-bg: #F9FAFB;
-        --color-surface: #FFFFFF;
-        --color-surface-highlight: #F3F4F6;
-        --color-primary: #111827;
-        --color-secondary: #6B7280;
-        --color-accent: #4F46E5;
-        --color-accent-fg: #FFFFFF;
-        --color-accent-dim: #E0E7FF;
-      }
-
-      .theme-dawn {
-        --color-bg: #FFFBF0;
-        --color-surface: #FFFFFF;
-        --color-surface-highlight: #FBF5E5;
-        --color-primary: #4A3B32;
-        --color-secondary: #8C7B70;
-        --color-accent: #D97706;
-        --color-accent-fg: #FFFFFF;
-        --color-accent-dim: #FEF3C7;
-      }
-
-      .theme-paper {
-        --color-bg: #F5F5F4;
-        --color-surface: #FFFFFF;
-        --color-surface-highlight: #E7E5E4;
-        --color-primary: #292524;
-        --color-secondary: #78716C;
-        --color-accent: #57534E;
-        --color-accent-fg: #FFFFFF;
-        --color-accent-dim: #D6D3D1;
-      }
-
-      .theme-midnight {
-        --color-bg: #0F172A;
-        --color-surface: #1E293B;
-        --color-surface-highlight: #334155;
-        --color-primary: #F8FAFC;
-        --color-secondary: #94A3B8;
-        --color-accent: #818CF8;
-        --color-accent-fg: #000000;
-        --color-accent-dim: #312E81;
-      }
-
-      .theme-obsidian {
-        --color-bg: #000000;
-        --color-surface: #0A0A0A;
-        --color-surface-highlight: #171717;
-        --color-primary: #EDEDED;
-        --color-secondary: #666666;
-        --color-accent: #A855F7;
-        --color-accent-fg: #FFFFFF;
-        --color-accent-dim: #3B0764;
-      }
-
-      .theme-terminal {
-        --color-bg: #020402;
-        --color-surface: #0D1C0D;
-        --color-surface-highlight: #142814;
-        --color-primary: #22C55E;
-        --color-secondary: #15803D;
-        --color-accent: #22C55E;
-        --color-accent-fg: #000000;
-        --color-accent-dim: #052e16;
-      }
-
-      ::-webkit-scrollbar {
-        width: 4px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      ::-webkit-scrollbar-thumb {
-        background-color: var(--color-secondary);
-        border-radius: 20px;
-        opacity: 0.2;
-      }
-      
-      html {
-        background-color: var(--color-bg);
-      }
-
-      html, body {
-        height: 100%;
-        min-height: 100vh;
-        overflow-x: hidden;
-      }
-
-      body {
-        background-color: var(--color-bg);
-        color: var(--color-primary);
-        transition: background-color 0.4s ease, color 0.4s ease;
-      }
-      
-      #root {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
+      :root { --color-bg: #F9FAFB; --color-surface: #FFFFFF; --color-surface-highlight: #F3F4F6; --color-primary: #111827; --color-secondary: #6B7280; --color-accent: #4F46E5; --color-accent-fg: #FFFFFF; --color-accent-dim: #E0E7FF; }
+      .theme-dawn { --color-bg: #FFFBF0; --color-surface: #FFFFFF; --color-surface-highlight: #FBF5E5; --color-primary: #4A3B32; --color-secondary: #8C7B70; --color-accent: #D97706; --color-accent-fg: #FFFFFF; --color-accent-dim: #FEF3C7; }
+      .theme-paper { --color-bg: #F5F5F4; --color-surface: #FFFFFF; --color-surface-highlight: #E7E5E4; --color-primary: #292524; --color-secondary: #78716C; --color-accent: #57534E; --color-accent-fg: #FFFFFF; --color-accent-dim: #D6D3D1; }
+      .theme-midnight { --color-bg: #0F172A; --color-surface: #1E293B; --color-surface-highlight: #334155; --color-primary: #F8FAFC; --color-secondary: #94A3B8; --color-accent: #818CF8; --color-accent-fg: #000000; --color-accent-dim: #312E81; }
+      .theme-obsidian { --color-bg: #000000; --color-surface: #0A0A0A; --color-surface-highlight: #171717; --color-primary: #EDEDED; --color-secondary: #666666; --color-accent: #A855F7; --color-accent-fg: #FFFFFF; --color-accent-dim: #3B0764; }
+      .theme-terminal { --color-bg: #020402; --color-surface: #0D1C0D; --color-surface-highlight: #142814; --color-primary: #22C55E; --color-secondary: #15803D; --color-accent: #22C55E; --color-accent-fg: #000000; --color-accent-dim: #052e16; }
+      html, body { height: 100%; min-height: 100vh; overflow-x: hidden; background-color: var(--color-bg); color: var(--color-primary); transition: background-color 0.4s ease; }
+      #root { min-height: 100vh; display: flex; flex-direction: column; }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "canvas-confetti": "https://esm.sh/canvas-confetti@^1.9.4",
     "vite": "https://esm.sh/vite@^7.3.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
